force-app/main/default/objects/Staging_Log__e/Staging_Log__e.object-meta.xml
<CustomObject>
    <description>GC 03/23/23: To be used on any integration. Will hold all, and only, the failures from the inbound and outbound messages. It has a platform event flow called &quot;Create Integration Log&quot; that inserts the values on the Integration_Log__c custom object.</description>
    <label>Staging Log</label>
    <pluralLabel>Staging Logs</pluralLabel>
</CustomObject>