force-app/main/default/objects/Staging_Log__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>