force-app/main/default/objects/Staging_Log__e/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>