force-app/main/default/objects/Staging_Log__e/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <label>Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>