force-app/main/default/objects/Staging_Log__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>8</length>
    <type>Text</type>
</CustomField>